syntax = "proto3";

package com.pojtinger.felicitas.pojde;

import "google/protobuf/empty.proto";

option go_package = "github.com/pojntfx/pojde/pkg/api/proto/v1";

service InstancesService {
  rpc GetInstances(google.protobuf.Empty) returns (InstancesMessage);
  rpc GetLogs(InstanceReferenceMessage) returns (stream LogMessage);
  rpc StartInstance(InstanceReferenceMessage) returns (google.protobuf.Empty);
  rpc StopInstance(InstanceReferenceMessage) returns (google.protobuf.Empty);
  rpc RestartInstance(InstanceReferenceMessage) returns (google.protobuf.Empty);
  rpc RemoveInstance(InstanceRemovalOptionsMessage) returns (google.protobuf.Empty);
  rpc GetCACert(google.protobuf.Empty) returns (CACertMessage);
}

message InstancesMessage {
  repeated InstanceMessage instances = 1;
}

message InstanceMessage {
  string Name = 1;
  repeated int32 Ports = 2;
  string Status = 3;
}

message InstanceReferenceMessage {
  string Name = 1;
}

message LogMessage {
  string Chunk = 1;
}

message InstanceRemovalOptionsMessage {
  string Name = 1;
  bool Customizations = 2;
  bool DEBCache = 3;
  bool Preferences = 4;
  bool UserData = 5;
  bool Transfer = 6;
}

message CACertMessage {
  string Content = 1;
}